--- a/app/views/templates/miniCardDirective.html
+++ b/app/views/templates/miniCardDirective.html
@@ -1,8 +1,7 @@
 <div class="row cards">
 	<h4>
-		{{ cards.name }} <a class="btn btn-default" ng-click="cards.draw()">Draw
-			{{ cards.name }}</a>
-
+		{{ cards.name }} 
+		<a class="btn btn-default" ng-click="cards.draw()">Draw {{ cards.name }}</a>
 	</h4>
 	<div class="col-xs-2 col-sm-2" ng-repeat="card in cards.list"
 		ng-class="{'card-exhausted' : card.exhaust}">
@@ -39,9 +38,11 @@
 						<a class="btn btn-warning btn-sm" href=""
 							ng-click="cards.restore(card)">Restore</a>
 					</div>
-					<mini-card-transfer class="row" card="card" inv="inv" type="cards.name"></mini-card-transfer>
+					<mini-card-transfer class="row" card="card" inv="inv"
+						type="cards.name"></mini-card-transfer>
 					<div class="row">
-					  <a href="" class="btn btn-sm btn-success" ng-click="card.details=false;">Close</a>
+						<a href="" class="btn btn-sm btn-success"
+							ng-click="card.details=false;">Close</a>
 					</div>
 				</div>
 			</div>
