--- a/app/views/templates/monstersTrophiesDirective.html
+++ b/app/views/templates/monstersTrophiesDirective.html
@@ -1,8 +1,7 @@
 <div>
 	<h4>Monsters</h4>
 	<div class="dropdown">
-		<a data-toggle="dropdown" class="btn btn-default" href=""
-			ng-click="select()">Select Monster <span class="caret"></span></a>
+		<a data-toggle="dropdown" class="btn btn-default" href="">Select Monster <span class="caret"></span></a>
 		<ul class="dropdown-menu" role="menu">
 			<li ng-repeat="monster in inv.cards.monsters.externalPile.list | orderBy: 'name'"><a
 				href="" ng-click="inv.cards.monsters.drawByName(monster.name)" class="btn btn-default btn-sm">
