--- a/app/views/investigator.html
+++ b/app/views/investigator.html
@@ -1,6 +1,8 @@
 <div class="investigator-page">
 
 	<turn-and-phase-ctrl></turn-and-phase-ctrl>
+	<dice-and-roll></dice-and-roll>
+
 
 	<div class="col-sm-8 investigator-list-container box-mark">
 		<investigator class="investigator-single"
