--- a/app/views/templates/turnAndPhaseCtrlDirective.html
+++ b/app/views/templates/turnAndPhaseCtrlDirective.html
@@ -6,6 +6,9 @@
 			<button ng-click="phase.nextInvestigatorOrPhase()"
 				class="btn btn-success">Next Turn</button>
 		</div>
+		<div class="col-sm-2">
+			 <dice-and-roll></dice-and-roll>
+		</div>
 		<h4 class="col-sm-2">
 			Phase: <strong>{{ phase.phases[phase.currentPhase] }}</strong>
 		</h4>
@@ -21,7 +24,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-sm-2 pull-right">
+		<div class="col-sm-1 pull-right">
 			<a class="btn btn-info btn-xs" href="#/settings">Settings</a> <a
 				class="btn btn-info btn-xs" href="#/arkham_encounters">Encounter</a>
 			<a class="btn btn-info btn-xs" href="#/mythos">Mythos</a>
