redistribute some investigator layout

--- a/app/views/templates/skilltupleDirective.html
+++ b/app/views/templates/skilltupleDirective.html
@@ -1,4 +1,4 @@
-<div class="skills">
+<div class="two-skills">
 	<div class="row">
 		<div class="col-xs-4 text-uppercase">{{ first }}</div>
 		<div class="col-xs-2 btn" ng-click="select(x)"
