--- a/app/views/templates/investigatorDirective.html
+++ b/app/views/templates/investigatorDirective.html
@@ -1,8 +1,13 @@
 <div class="investigator"
 	ng-class="{'background-grey': inv.name == current.name}">
-
 	<div class="row head">
-		<div class="col-xs-6">
+		<div class="col-xs-3">
+			<dice-and-roll></dice-and-roll>
+		</div>
+
+		<div class="col-xs-3">
+			<h3 class="row">{{ inv.name}}</h3>
+			<h4 class="row">{{ inv.profession}}</h4>
 			<div ng-show="inv.name == first.name">
 				<img height="50px" ng-src="images/arkham/FirstInvestigator.png" />
 			</div>
@@ -10,11 +15,10 @@
 				<img height="100px" width="100px"
 					ng-src="images/arkham/investigators/{{ inv.image }}" />
 			</div>
-			<dice-and-roll></dice-and-roll>
+			<div class="row">Home: {{ inv.home}}</div>
 		</div>
-		<div class="col-xs-6">
-			<h3 class="row">{{ inv.name}}</h3>
-			<h4 class="row">{{ inv.profession}}</h4>
+
+		<div class="col-xs-4">
 			<div class="row">
 				<plus-minus value="inv.curSanity" size="big" show="1"
 					max="inv.maxSanity"></plus-minus>
@@ -37,13 +41,16 @@
 			</div>
 		</div>
 	</div>
+	
 	<div class="row middle">
 		<div class="col-xs-6">
-			<div class="row">Home: {{ inv.home}}</div>
 			<div class="row text-center">
 				<big><strong ng-class="{ 'text-danger' : !inv.availableFocus}">Focus:
 						{{ inv.availableFocus}} / {{ inv.focus }}</strong></big> <a
-					ng-click="inv.availableFocus=inv.focus">[[reset]]</a>
+					ng-click="inv.availableFocus=inv.focus">[[reset]]</a> <a
+					ng-hide="inv.hideFreeFocus" ng-click="inv.availableFocus=99">((Free
+					Focus))</a> <a ng-hide="inv.hideFreeFocus"
+					ng-click="inv.hideFreeFocus=true;">((Hide Free Focus))</a>
 			</div>
 		</div>
 		<div class="col-xs-6">
@@ -51,7 +58,8 @@
 			<p>{{ inv.specialAbilityDescription}}</p>
 		</div>
 	</div>
-	<div class="row skills">
+	
+	<div class="row skills col-xs-4">
 		<skill-tuple first="Speed" second="Sneak" inv="inv"
 			available-focus="inv.availableFocus"></skill-tuple>
 		<skill-tuple first="Fight" second="Will" inv="inv"
@@ -84,16 +92,15 @@
 			Skill</button>
 		<ul>
 			<li ng-class="{'card-exhausted': card.exhaust}"
-				ng-repeat="card in inv.cards.skills.list"><strong>{{ card.name}}</strong>. <span>{{card.text}}</span>
-				 <a href=""
+				ng-repeat="card in inv.cards.skills.list"><strong>{{
+					card.name}}</strong>. <span>{{card.text}}</span> <a href=""
 				ng-click="inv.cards.skills.discard(card.name)">Discard</a> <a
 				href="" ng-hide="card.exhaust"
 				ng-click="inv.cards.skills.exhaust(card)">Exhaust</a> <a href=""
-				ng-show="card.exhaust" ng-click="inv.cards.skills.restore(card)">Restore</a>
-			</li>
+				ng-show="card.exhaust" ng-click="inv.cards.skills.restore(card)">Restore</a></li>
 		</ul>
 	</div>
-  <inv-special-cards-list></inv-special-cards-list>
+	<inv-special-cards-list></inv-special-cards-list>
 	<monsters-trophies inv="inv"></monsters-trophies>
 	<gates-trophies inv="inv"></gates-trophies>
 	<hr>
