add more complex dgeni generation
using degeni-angular example

--- a/docs/config/templates/common.template.html
+++ b/docs/config/templates/common.template.html
@@ -1,20 +1,10 @@
-<h1>{{ doc.codeName }} ({{ doc.outputPath }})</h1>
-<p>{{ doc.description }}</p>
+{% extends 'base.template.html' %}
 
-{%- if doc.params %}
-<h2>Params</h2>
-<ul>
-{%- for param in doc.params %}
-  <li>
-    <strong>{{ param.name }}</strong> { {{ param.typeList }} } - {{ param.description }}
-  </li>
-{%- endfor %}
-</ul>
-{%- endif %}
+{% block body %}
+<h2>{$ doc.name $}</h2>
+<strong>({$ doc.docType $})</strong>
 
-{%- if doc.returns %}
-<h2>Returns</h2>
-<p>
-  { {{ doc.returns.typeList }} } - {{ doc.returns.description }}
-</p>
-{%- endif %}
+<p>{$ doc.description $}</p>
+
+{$ doc.parent | relativeLink(doc, 'Go Up') $}
+{% endblock %}
