--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,21 +1,21 @@
-<div class="row marketing">
-
-	<div class="jumbotron">
-		<h1>Hello, world!</h1>
-		<div>
-			<p> This is a `work in progress` </p>
-			<p>Go to settings and chose investigators</p>
-			<p>Then, go to investigators, and you'll have help bookeeping
-				your investigator sheet</p>
-			<p>Or, you can use <a href="#/arkham_encounters>Arkham Encounters</a> to avoid drawing cards from those decks</p>
-			
-		</div>
-		<p>
-			<a href="#/settings" class="btn btn-primary btn-lg" role="button">Settings</a>
-		</p>
-		<img width="300px" src="images/arkham/ArkhamHorrorBox.jpg" />
-	</div>
-
-</div>
-
-
+<section>
+	<md-subheader>What is this?</md-subheader>
+	<md-list layout="column">
+	<md-item>A helper to play a board game called 'arkham horror'</md-item>
+	<md-list>
+</section>
+<section>
+	<md-subheader class="md-primary">Usage</md-subheader>
+	<md-list layout="column" layout-align="space-around center" layout-padding layout-margin>
+	<md-item>Use arrows in top toolbar to navigate
+		<md-divider></md-divider>
+	</md-item>
+	<md-item>Go to 'settings' and choose your investigators
+		<md-divider></md-divider>
+	</md-item>
+	<md-item>etc
+		<md-divider></md-divider>
+	</md-item>
+	<md-list>
+</section>
+<md-content>
