Use material design for settings

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,7 +1,11 @@
+<div layout="row">
+<div flex="15" hide-sm>
+</div>
+<div flex-gt-sm="70" flex-sm="100" class="md-whiteframe-z2" layout-padding layout-margin>
 <section>
 	<md-subheader>What is this?</md-subheader>
 	<md-list layout="column">
-	<md-item>A helper to play a board game called 'arkham horror'</md-item>
+	 <md-item><md-item-content><p>A helper to play a board game called 'arkham horror'</p></md-item-content></md-item>
 	<md-list>
 </section>
 <section>
@@ -18,4 +22,5 @@
 	</md-item>
 	<md-list>
 </section>
-<md-content>
+</div>
+</div>
