--- a/app/views/settings.html
+++ b/app/views/settings.html
@@ -1,38 +1,45 @@
-<div>
-  <h3>
-    Settings
-  </h3>
-  <div>
-    <h4>Select active investigators</h4>
-    <ul class="well ">
-      <li ng-click="toggle(inv)"
-      ng-class="{'btn-success': inv.inUse, 'btn-default': !inv.inUse}"
-      class="btn" ng-repeat="inv in investigatorsData"><img
-      height="50px" ng-src="images/arkham/investigators/{{ inv.image }}" />
-      {{ inv.name }}</li>
-    </ul>
-  </div>
-
-  <div>
-    <h4>Initial ordering</h4>
-    <ol class="well" ui-sortable ng-model="activeList">
-      <li ng-repeat="inv in activeList" bg-info>
-      <img height="100px" ng-src="images/arkham/investigators/{{ inv.image }}" />
-      {{ inv.name}}
-      </li>
-    </ol>
-  </div>
-  
-  <div>
-  	<h4>Setup</h4>
-  	<button ng-click="setupAll()" class="btn-success">Setup All!</button>
-  	<ol class="well">
-      <li ng-click="setupInv(inv)" class="btn btn-sm" ng-repeat="inv in activeList">
-      	<img  height="100px" ng-src="images/arkham/investigators/{{ inv.image }}" />
-      	{{ inv.name}}
-      </li>
-    </ol>
-  	
-  </div>
-</div>
-
+<md-tabs>
+  <md-tab>
+    <md-tab-label>Investigators</md-tab-label>
+    <div layout="row">
+    <div flex="15" hide-sm></div>
+    <div flex-gt-sm="70" class="md-whiteframe-z1"  layout-margin layout-fill layout-align="space-around center">
+    <md-content style="height: 400px;" flex>
+    <section> 
+      <md-subheader class="md-primary">
+        <div layout="row" layout-fill> 
+        <span >Selected
+        Investigators: {{ activeList.length }}</span>
+        <span flex> </span>
+        </div>
+      </md-subheader>
+      <md-list>
+      <md-item ng-repeat="inv in investigatorsData">
+        <md-item-content>
+          <md-switch aria-label="{{inv.name}}" ng-model="inv.inUse" ng-change="toggle(inv);">
+          
+            <img height="50px" ng-src="images/arkham/investigators/{{ inv.image }}" />
+            <span>  {{ inv.name }}</span> 
+          
+          </md-switch>
+        </md-item-content>
+      </md-item>
+      </md-list>
+    </section>
+    </md-content>
+    </div>
+    </div>
+  </md-tab>
+  <md-tab>
+    <md-tab-label>Playing Order</md-tab-label>
+    Playing Order
+  </md-tab>
+  <md-tab>
+    <md-tab-label>Ancient One</md-tab-label>
+    Ancient One
+  </md-tab>
+  <md-tab>
+    <md-tab-label>Start</md-tab-label>
+    <md-button class="md-raised" ng-click="setupAll();">Setup All Investigators!</md-button>
+  </md-tab>
+</md-tabs>
